--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         </p>
 
         <p>
+            related personality
+            great personality
+            arrogant personality
+            annoying personality
+        </p>
+
+        <p>
             <h2> my favourite dramas </h2>
             <ul>
                 <li>falling on your smile</li>
