--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             annoying personality
         </p>
 
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates officia totam 
+            <br>
+            sunt harum quibusdam saepe quos ea molestias reiciendis? Provident officia eos fugit iste at culpa nemo sint. Saepe, dolore.</p>
+
         <p>
             <h2> my favourite dramas </h2>
             <ul>
